--- a/Fletnix/View/Pages/CatalogItemDetailPage.xaml
+++ b/Fletnix/View/Pages/CatalogItemDetailPage.xaml
@@ -10,9 +10,37 @@
       mc:Ignorable="d">
 
     <Grid>
-        <TextBlock HorizontalAlignment="Center"
+        <StackPanel>
+            <TextBlock HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    FontSize="36"
                    Text="{Binding CatalogItem.Title}" />
+            <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Center">
+                
+                <Label Content="Like"
+                       Margin="50 0"
+                       Foreground="Red"/>
+                
+                <TextBlock                
+                Text="{Binding CatalogItem.AmountOfLikes}"/>
+                
+                <Label Content="Dislike"
+                       Margin="50 0"
+                       Foreground="Green"/>
+                
+                <TextBlock
+                Text="{Binding CatalogItem.AmountOfDislikes}"/>
+            </StackPanel>
+            
+            
+            <Button x:Name="btnLike"
+                    Content="Like"
+                    Command="{Binding AddLikeCommand, Mode=OneTime}"/>
+            
+            <Button x:Name="btnDislike"
+                    Content="Dislike"/>
+        </StackPanel>
+        
     </Grid>
 </Page>
